--- a/README.adoc
+++ b/README.adoc
@@ -15,6 +15,6 @@ Part to show a a single blog post. +
 Created to show a preview, not to be used on a live page. +
 Use this to create a template page for all plog posts. +
 
-_Current version:_ *_0.0.2_* +
+_Current version:_ *_V0.1.0_* +
 
 Created for enonic xp platform + 
