--- a/docs/usage.adoc
+++ b/docs/usage.adoc
@@ -5,13 +5,12 @@
 When installing the application you get two new parts.
 
 * *Blog-overview* +
-Is the main part of the app. +
-This displayes a teaser to all articles.
+This displayes a teaser to all articles. +
 The articles that are displayed are all the child elements of type blog-post. +
 All the different articles have a link to its article from the overview.
 
 * *Blog-show* +
-Part to show a single blog post. +
+Part that shows a single blog post. +
 Created to show a preview, not to be used on a live page. +
 Recommended this to create a template page for all plog posts. +
 
@@ -20,9 +19,7 @@ Content-type to be used with blog show. +
 With this you write the blog body, add images etc.
 
 
-
 == Setup in content studio.
-
 There are multiple ways to use this application. +
 I'll go through the most used setup. +
 
